<resources>
    <string name="app_name">Axounaut</string>
    <string name="title_home">Home</string>
    <string name="title_stock">Stock</string>
    <string name="title_articles">Articles</string>


    <string name="add_command_title">Ajouter une commande</string>
    <string name="recap">Récapitulatif</string>
    <string name="command_future">Commandes à venir</string>
    <string name="command_to_do">Commandes à faire</string>
    <string name="command_past">Commandes passées</string>

    <!-- General labels -->
    <string name="validate">Valider</string>
    <string name="confirm">Confirmer</string>
    <string name="adding">Ajouter</string>
    <string name="adding_product">Ajouter un ingrédient</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="delivery">Livrer</string>
    <string name="x_count">x %1$s</string>
    <string name="total_price">Prix total : %1$s€</string>
    <string name="received_payment_amount">Paiement reçu : %1$d€</string>
    <string name="applied_reduction">Réduction appliquée : %1$d€</string>
    <string name="price_euro">%1$s €</string>
    <string name="article_command_number">Commandé %1$ fois</string>
    <string name="pay">Payer</string>
    <string name="deliver">Livrer</string>
    <string name="category">Catégorie</string>
    <string name="save">Sauvegarder</string>

    <!-- Error strings -->
    <string name="uncomplete_payment_error">Cette commande est en attente de paiement complet. \nIl manque %1$d€.</string>


    <!-- Article List Fragment -->
    <string name="no_articles_error">Aucun article n\'est enregistré.</string>
    <string name="article_name">%1$s</string>
    <string name="article_quantity">Q : %1$d</string>
    <string name="article_step">Etape %1$d / 4</string>
    <string name="article_name_title">Nom de l\'article</string>
    <string name="article_step1_title">Caractéristiques principales</string>
    <string name="article_step2_title">Choix des ingrédients</string>
    <string name="article_step3_title">Quantité et temps de préparation</string>
    <string name="article_step4_title">Récapitulatif et validation</string>

    <string name="article_name_recap">Article : %1$s</string>
    <string name="article_category_recap">Catégorie : %1$s</string>
    <string name="article_recap_preparing_time">Temps de préparation : %1$s</string>
    <string name="article_short_recap_preparing_time">Préparation : %1$s</string>

    <string name="article_no_price_edition_allowed">La modification du prix n\'est pas possible. Veuillez créer un nouvel article pour changer le prix.</string>


    <!-- Command Fragment -->
    <string name="no_loading_command_error">Aucune commande en cours.</string>
    <string name="no_to_come_command_error">Aucune commande à venir.</string>
    <string name="no_command_error">Aucune commande passée.</string>
    <string name="delete_dialog_title">Suppression de commande</string>
    <string name="delete_dialog_content">Etes-vous sûr de vouloir supprimer cette commande ?</string>
    <string name="number_label">N°%1$d</string>
    <string name="command_number_label">Commande %1$d</string>
    <string name="command_delivery_date_label">Livraison le %1$s</string>
    <string name="add_command_label">Ajouter une commande</string>
    <string name="pay_command_label">Payer une commande</string>

    <string name="delivery_dialog_title">Livraison de commande</string>
    <string name="delivery_incomplete_command_title">Commande incomplète</string>
    <string name="delivery_dialog_content">Etes-vous sûr de vouloir livrer en l\'état ? Tous les articles
        non réalisés seront annulés.
    </string>

    <string name="cancel_dialog_title">Supprimer un article</string>
    <string name="cancel_dialog_content">Voulez-vous supprimer cet article ?</string>
    <string name="delete_article_dialog_content">Voulez-vous supprimer cet article ? Si oui, et qu\'il est associé à une commande, il sera juste caché.</string>
    <string name="cancel_article">Annuler</string>
    <string name="delete_article">Supprimer</string>

    <!-- Pay command dialog Fragment -->
    <string name="total_price_command_number_label">Prix total de la commande : %1$s€</string>
    <string name="total_price_command_after_reduction_label">Prix total de la commande après réduction : %1$s€</string>
    <string name="command_details_client_number">%1$s - Commande n°%2$s</string>
    <string name="dialog_incomplete_payment_title">Paiement incomplet</string>
    <string name="dialog_incomplete_payment_content">Le prix total de cette commande est de %1$d€. Le paiement reçu est incomplet. Souhaitez-vous valider ce paiement et passer la commande au statut “Paiement incomplet” ? </string>

    <!-- Client Fragment -->
    <string name="add_client_label">Ajouter un client</string>
    <string name="client_fidelity_label">%1$s points de fidélité</string>
    <string name="client_name_label">%1$s %2$s</string>

    <!-- Analysis Fragment -->
    <string name="cross_quantity">X %1$s</string>

    <!-- Errors -->
    <string name="no_client_error">Il n\'y a aucun client d\'enregistré. Veuillez en ajouter un en cliquant sur ajouter.</string>

    <!-- Success messages -->
    <plurals name="adding_client_toast">
        <item formatted="true" quantity="one">Le client a été supprimé avec succès.</item>
        <item formatted="true" quantity="other">Les %1$d clients ont bien été supprimés.</item>
    </plurals>

    <plurals name="ingredientCount">
        <item formatted="true" quantity="one">%1$d of %2$d ingredient</item>
        <item formatted="true" quantity="other">%1$d of %2$d ingredient</item>
    </plurals>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="completed_payment">Paiement complet</string>
    <string name="complete_payment">Compléter paiement</string>
    <string name="incomplete_payment_error">Le paiement est incomplet. En procédant au paiement, elle devra être complétée ultérieurement.</string>
    <string name="reduction">Réduction</string>
    <string name="round">Arrondir</string>
    <string name="recipe">Recette</string>
    <string name="no_analysis_available">Aucune analyse disponible pour le moment.</string>
    <string name="title_activity_analysis">AnalysisActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Suivant</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_compose">HomeComposeActivity</string>
</resources>