<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_add_article_step_1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_title_article_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/article_name_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_article_name"
        style="@style/App.custom.EditText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginVertical="15dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="25dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title_article_name"
        app:layout_constraintTop_toBottomOf="@id/tv_title_article_name"
        tools:text="" />

    <TextView
        android:id="@+id/tv_title_article_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_article_name"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_edit_text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/tv_title_article_category"
        app:layout_constraintTop_toBottomOf="@id/tv_title_article_category" />

    <ImageButton
        android:id="@+id/ib_minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_minus"
        android:tint="@color/gray_2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/spinner_categories"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/spinner_categories"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:gravity="end"
        android:text="0"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/ib_minus"
        app:layout_constraintEnd_toStartOf="@id/tv_count_euro"
        app:layout_constraintTop_toTopOf="@id/ib_minus"
        tools:text="10" />

    <TextView
        android:id="@+id/tv_count_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="€"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/ib_minus"
        app:layout_constraintEnd_toStartOf="@id/ib_add"
        app:layout_constraintTop_toTopOf="@id/ib_minus"
        tools:text="€" />

    <ImageButton
        android:id="@+id/ib_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_add"
        android:tint="@color/gray_2"
        app:layout_constraintBottom_toBottomOf="@id/ib_minus"
        app:layout_constraintEnd_toEndOf="@id/et_article_name"
        app:layout_constraintTop_toTopOf="@id/ib_minus" />

    <TextView
        android:id="@+id/tv_no_price_edition_allowed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/article_no_price_edition_allowed" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>